WebCore/platform/gtk/ScrollbarGtk.h
@@ -36,6 +36,8 @@ namespace WebCore {
 class ScrollbarGtk : public Scrollbar {
 public:
     friend class Scrollbar;
+    friend class ScrollView;
+    ~ScrollbarGtk();
 
     virtual void setFrameRect(const IntRect&);
     virtual void paint(GraphicsContext*, const IntRect&);
@@ -50,7 +52,10 @@ public:
     virtual void frameRectsChanged();
 
 protected:
+    static PassRefPtr<ScrollbarGtk> createScrollbar(ScrollbarClient* client, ScrollbarOrientation orientation, GtkAdjustment*);
+
     ScrollbarGtk(ScrollbarClient*, ScrollbarOrientation, ScrollbarControlSize);
+    ScrollbarGtk(ScrollbarClient*, ScrollbarOrientation, GtkAdjustment*);
 
     virtual void updateThumbPosition();
     virtual void updateThumbProportion();
